<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.main.SettingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_getPower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/current_power" />

            <Button
                android:id="@+id/btn_getPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_power" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_setPower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/enter_power" />

            <Button
                android:id="@+id/btn_setPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_power" />
        </LinearLayout>
        <EditText
            android:id="@+id/et_deviceID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="deviceID"/>
        <Button
            android:id="@+id/btn_deviceID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_deviceID"/>
        <EditText
            android:id="@+id/edt_startFrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/start_frency"/>
        <EditText
            android:id="@+id/edt_frencyStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/frency_step"/>
        <EditText
            android:id="@+id/edt_frencyNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/frency_number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_configFrency"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_frency"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_getFrency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/get_frency"/>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/spinner_mask_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_mask_area"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask_list"
                app:layout_constraintEnd_toStartOf="@+id/spinner_mask_data"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <Spinner
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/spinner_mask_data"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                />
        </android.support.constraint.ConstraintLayout>
        <EditText
            android:id="@+id/edt_maskStartAddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:hint="@string/mask_start"/>
        <EditText
            android:visibility="gone"
            android:id="@+id/edt_maskLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/mask_len"/>
        <EditText
            android:id="@+id/edt_maskData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdefABCEDFG"
            android:hint="@string/mask_data"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_configMask"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_mask"/>
            <Button
                android:id="@+id/btn_getMask"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/clear_mask"/>
        </LinearLayout>

        <EditText
            android:visibility="invisible"
            android:id="@+id/edt_rangeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="range value"/>
        <LinearLayout
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_setRange"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_range"/>
            <Button
                android:id="@+id/btn_getRange"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/get_range"/>
        </LinearLayout>




    </LinearLayout>
</ScrollView>
